--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@discordjs/voice": "^0.6.0",
+    "array-shuffle": "^3.0.0",
+    "d3-array": "^3.0.2",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.1.0",
+    "dotenv": "^16.0.0",
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
     "node": "16.6.1",
     "play-dl": "^0.6.4",
+    "spotify-url-info": "^2.2.3",
     "yt-search": "^2.10.1",
     "ytdl-core": "^4.9.1",
+    "ytpl": "^2.2.3",
     "ytsr": "^3.5.3"
   },
   "scripts": {
